# writer-deck

./: .gitignore  AUDIT-FIXES-2026-07-13.md  CHANGELOG-IMPROVEMENTS.md  CLAUDE.md  FIXES-2026-07-13.md  IMPROVEMENTS-PLAN.md  IMPROVEMENTS.md  NEXT-STEPS.md  README.md  USER_GUIDE.md  config_default.yaml  deploy.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.sh  setup.sh  writer-deck.service
lib/waveshare_epd/: epd7in5_V2.py  epdconfig.py
tests/: test_app.py  test_base_mode_pagination.py  test_config.py  test_distraction_free_headings.py  test_document.py  test_driver.py  test_epd_driver.py  test_epdconfig.py  test_file_manager.py  test_fonts.py  test_glyph_cache.py  test_headings.py  test_integration.py  test_keyboard_reader.py  test_keymapper.py  test_main.py  test_markdown.py  test_mode_scroll_selection.py  test_outline_overlay.py  test_overlays.py  test_pagination.py  test_perf.py  test_platform.py  test_power.py  test_pygame_reader.py  test_reading_mode.py  test_refresh_manager.py  test_renderer.py  test_session.py  test_splash.py  test_status_bar.py  test_stdin_reader.py  test_text_wrapper.py  test_usb_export.py
tools/: epd_sleep.py
writerdeck/: __init__.py
writerdeck/core/: app.py  config.py  document.py  session.py
writerdeck/display/: driver.py  fonts.py  glyph_cache.py  pygame_driver.py  refresh_manager.py  renderer.py  splash.py  status_bar.py
writerdeck/input/: keyboard.py  keymapper.py  pygame_reader.py  stdin_reader.py
writerdeck/modes/: base_mode.py  dashboard.py  distraction_free.py  file_picker.py  overlay.py  (+6 more)
(+10 files in other folders)
